--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+  <meta property="og:title" content="CORON-AWARENESS">
+  <meta property="og:description" content="A web application to inform users of new corona virus cases and more!">
+  <meta name="type" property=”og:type” content=”website” />
+  <meta name="image" property="og:image" content='https://i.ibb.co/W56b21Y/Screen-Shot-2020-11-03-at-10-40-41-AM.png'>
+
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,8 +31,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>CORON-AWARENESS</title>
 </head>
+
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
